style.css
/* ... */
.settings-grid {
    display: grid;
}

.settings-grid>.seperator {
    margin-top: 15px;
}

.modal-footer-creds {
    height: 100%;
    padding-top: 15px;
    position: absolute;
    bottom: 5px;
    text-align: left;
    display: grid;
    font-family: monospace;
}

.modal-footer-creds>span {
    height: min-content;
}

.project-version {
    top: 0;
    margin-bottom: auto;
}

.copyright-text {
    bottom: 0;
}

.settings-footer-credits {
    margin-top: 25px;
}

.percentage-display {
    right: 15px;
    position: absolute;
    width: 15px;
    height: 50%;
    border-radius: 1rem;
    background-color: var(--main-background);
    overflow: hidden;
    box-shadow: 0px 0px 1px 1px #181818 inset;
}

.percentage-display>.icon {
    position: absolute;
    z-index: 2;
    top: 25%;
    font-size: 15px;
}

.percentage-display>.percentage {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 0%;
    background-color: white;
    transition: height 1s;
    border-bottom-left-radius: 1rem;
    border-bottom-right-radius: 1rem;
    box-shadow: 0px 0px 3px 1px #000000c4 inset;
}

.input-field.col>label {
    left: 0 !important;
}

.setting>.input-field {
    margin: 0;
    margin-bottom: 5px !important;
    margin-left: auto !important;
}

.input-field {
    margin-bottom: 5px !important;
}


.setting.input-field>.select-wrapper {
    margin-left: auto !important;
}

.input-field>label {
    display: none;
}

.setting>label {
    margin-left: auto;
}

.setting>.input-field>input {
    height: 2.5rem !important;
    font-size: 15px !important;
    text-align: left;
    padding: 0 10px !important;
    display: flex;
}

.dropdown-content {
    height: max-content !important;
    max-height: 200px;
}

.dropdown-content>li {
    user-select: none;
    min-height: 15px !important;
}

.dropdown-content>li>span {
    padding: 10px 16px !important;
    user-select: none;
}


.range-field,
.range-field>input {
    margin: 0 !important;
    padding: 0 !important;
    border: none !important;
}

.setting-name {
    display: flex;
    justify-content: center;
    align-items: center;
}

.seperator {
    background-color: var(--background-brigther);
    height: 1px;
}

input[type="text"].select-dropdown:not(.browser-default) {
    border-bottom: 1px solid #3a3a3a !important;
}

input[type="text"].select-dropdown:not(.browser-default):focus {
    box-shadow: 0 0px 0 0 !important;
    border-bottom: 1px solid #3a3a3a !important;
}

.searchcity_input:focus {
    padding-top: 20px !important;
}

.material-symbols-outlined {
    user-select: none;
}

.search-box {
    margin-top: 35px !important;
    width: 600px !important;
}

.search-box-container {
    display: flex;
    justify-content: center;
    align-items: center;
    align-self: center;
}

.searchcity-input {
    height: 45px !important;
    padding-top: 0 !important;
    background: #161616 !important;
    border-radius: 22px !important;
    padding-left: 40px !important;
    border: solid 1px var(--background-brigther) !important;
    padding-bottom: 2px;
    transition: border-radius .2s;
    font-family: "Roboto Flex", sans-serif;

}

.searchcity-input.focused {
    border-bottom-left-radius: 0 !important;
    border-bottom-right-radius: 0 !important;
    border-top-left-radius: 22px !important;
    border-top-right-radius: 22px !important;
    border-bottom: none !important;
    transition: none !important;
}

.current_location {
    position: absolute !important;
    color: var(--text-color) !important;
    left: 0;
    box-shadow: none !important;
    width: 35px !important;
    height: 35px !important;
    margin-left: 5px;
    margin-bottom: 1px;
}

.search-box-container>.loading-spinner {
    transform: scale(80%);
    position: absolute;
    left: calc(100% - 40px) !important;
    top: 55%;
}


.autocomplete-dropdown {
    position: fixed;
    width: 600px;
    z-index: 2;
    background-color: #161616;
    padding-top: 5px;
    padding-bottom: 5px;
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
    max-height: 300px;
    overflow: auto;
    border: solid 1px var(--background-brigther);
}


.dropdown-item {
    width: 100%;
    box-shadow: none !important;
    text-transform: none !important;
    border-radius: 0 !important;
    background: transparent;
}

.dropdown-item:hover {
    background-color: rgb(51, 51, 51) !important;
}

.dropdown-item>.city-name {
    font-size: 15px;
}

.dropdown-item>.country-flag {
    max-width: 15px;
    max-height: 15px;
    margin-right: 5px;
}

.dropdown-item>.city-iso {
    font-size: 10px;
    font-weight: bold;
    margin-left: 5px;
}

.loading-spinner {
    opacity: 50%;
    width: 42px;
    user-select: none;
    pointer-events: none;
    z-index: 100;
}

#toast-container {
    bottom: 10% !important;
    top: 0% !important;
}

.weather-data {
    margin-top: 35px !important;
    width: 560px !important;
    padding-bottom: 10px;
}

.main-info-temperature {
    height: 30px;
    display: flex;
    align-items: center;
    transform: translateX(-15px);
    font-weight: bold;
    font-size: 25px;
    margin-bottom: 10px;
}

.main-info-weather-icon {
    pointer-events: none;
    user-select: none;
    width: 40px;
    margin-right: 15px;
    margin-left: 10px;
}

.main-info-right {
    position: absolute;
    margin-right: 10px;
    right: 0;
    display: grid;
    word-wrap: break-word;
    margin-left: auto;
    text-align: right;
}

.main-info-left {
    display: grid;
    margin-top: auto;
    text-align: left;
    user-select: none;
}

.temperature-value {
    transform: translateX(-10px);
}

.main-info {
    background: transparent !important;
    display: flex;
    align-items: center;
    font-size: 20px;
    margin-bottom: 15px;
    max-height: max-content !important;
}

.weather-description {
    font-size: 12px;
    color: var(--text-gray);
    text-wrap: nowrap;
}
/* ... */

